# test

./: .Xauthority  .bash_history  .bash_profile  .gitconfig  .viminfo  assignment1.sh  file2  history.txt  human_genomic.00.tar.gz.md5  human_genomic.01.tar.gz.md5  human_genomic.02.tar.gz.md5  human_genomic.03.tar.gz.md5  human_genomic.04.tar.gz.md5  human_genomic.05.tar.gz.md5  human_genomic.06.tar.gz.md5  human_genomic.07.tar.gz.md5  human_genomic.08.tar.gz.md5  human_genomic.10.tar.gz.md5  human_genomic.11.tar.gz.md5  human_genomic.12.tar.gz.md5  myscript.sh  operating_with_variables  pars.sh  rem.sh  script.sh  simple_writing  test
.ssh/: authorized_keys  cluster  cluster.pub  config  known_hosts
dustbin/: contents.txt
intro2cpp/: area_circle_rectg_triag  area_circle_rectg_triag.cpp  basic_io  basic_io.cpp  cin_with_strings  cin_with_strings.cpp  circle_circum  circle_circum.cpp  compound_operators  compound_operators.cpp  operating_with_variables  operating_with_variables.cpp  operating_with_variables_float  operating_with_variables_float.cpp  simple_writing  simple_writing.cpp  string_streams  string_streams.cpp
intro2linux/: INPUT12.new  INPUT23.new  INPUT30.new  INPUT32.new  INPUT34.new  INPUT36.new  INPUT39.new  INPUT40.new  INPUT41.new  INPUT46.new  INPUT47.new  INPUT50.new  INPUT9.new  add_out.c  all.lanes.txt  bashrc.example  flow-control-loop1.sh  flow-control-loop3.sh  lane2.txt  lane3.txt  loop2.bash  myscript.sh
intro2linux_make/cmake/using_libraries/: CMakeLists.txt
intro2linux_old/: INPUT14.new  INPUT15.new  INPUT17.new  INPUT18.new  INPUT20.new  (+38 more)
(+371 files in other folders)
